# TheHand

./: .gitignore  Cargo.toml  PLAN.md  README.md
.claude/skills/git-project-setup/: SKILL.md
.config/thehand/: config.toml.example
src/: audio.rs  config.rs  main.rs  state.rs  transcribe.rs  typing.rs  ui.rs
